[package]
name = "trait-based-collection-macros"
version = "0.1.0"
authors = ["Ferran Sanchez Llado"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/ferranSanchezLlado/rust-data-structures.git"
homepage = "https://github.com/ferranSanchezLlado/rust-data-structures.git"
documentation = "https://docs.rs/trait-based-collection-macros"
description = "The procedural macros for the collection crate"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0" , features = ["full", "extra-traits"] }
quote = "1.0"
convert_case = "0.5"
proc-macro2 = "1.0"