[package]
name = "trait-based-collection"
version = "0.1.0"
authors = ["Ferran Sanchez Llado"]
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/ferranSanchezLlado/rust-data-structures.git"
homepage = "https://github.com/ferranSanchezLlado/rust-data-structures.git"
documentation = "https://docs.rs/trait-based-collection"
description = "A trait-based collection library that implement different data structures using the same trait."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trait-based-collection-macros = { path = "../trait-based-collection-macros", version = "0.1" }
